add z-index to observatory_panel

--- a/client/observatory.less
+++ b/client/observatory.less
@@ -130,6 +130,7 @@ tr.no_border,
 	padding: 10px 10px 10px 40px;
 	filter: alpha(opacity=85);
 	opacity: .85;
+	z-index: 100000;
 }
 
 .observatory_panel a, .observatory_panel a:visited{
