basic theming support added

--- a/client/observatory.less
+++ b/client/observatory.less
@@ -1,64 +1,3 @@
-// ------------------ main styling colors ------------------------
-// ----------- Dark scheme --------------
-/*
-@panel_opacity: 90;
-@panel_opacity_fract: .90;
-
-@logs_main_color: #ddd;
-@panel_bg_color: #000;
-@observatory_trigger_color: yellow;//#117711;
-@clr_panel_border: #ccc;
-@clr_panel_links: #9FC54E;
-
-@clr_trigger_background: #333;
-@clr_trigger_bg_hover: #111;
-@clr_vertical_border: #eee;
-
-@yellow:#cccc11;
-@red:#cc1111;
-@clr_msg_warning: #999911;
-@clr_darker_grey: #555;
-@clr_dark_grey: #222;
-
-@clr_log_table_stripes: #070703;
-
-@clr_label_text: #fff;
-*/
-// ----------- other styles --------
-
-
-// ----------- END Dark scheme --------------
-
-// ----------- Light scheme --------------
-
-@panel_opacity: 95;
-@panel_opacity_fract: .95;
-
-@logs_main_color: #333;
-@panel_bg_color: #eee;
-
-@observatory_trigger_color: #333;//#117711;
-
-@clr_panel_border: #ccc;
-@clr_panel_links: #3a87ad;
-
-@clr_trigger_background: #eee;
-@clr_trigger_bg_hover: #999;
-@clr_vertical_border: #999;
-
-@yellow:#cccc11;
-@red:#cc1111;
-@clr_msg_warning: #999911;
-@clr_darker_grey: #555;
-@clr_dark_grey: #ccc;
-
-@clr_log_table_stripes: #ddd;
-
-@clr_label_text: #eee;
-
-// ----------- other styles --------
-// ----------- END Light scheme --------------
-
 // -------------- twitter bootstrap colors and common colors -----------
 @tb_green: #468847;
 @tb_red: #b94a48;
@@ -70,6 +9,139 @@
 @clr_fatal: red;
 
 @clr_module_label: #555;
+
+@red:#cc1111;
+@clr_msg_warning: #999911;
+
+// ****************** new theming approach ********************
+
+// ------------------ dark ----------------------
+@th_dark_clr_logs_main: #ddd;
+@th_dark_panel_bg_color: #000;
+@th_dark_clr_panel_border: #ccc;
+@th_dark_clr_yellow: #cccc11;
+@th_dark_clr_log_table_stripes: #070703;
+@th_dark_clr_vertical_border: #999;
+@th_dark_clr_darker_grey: #555;
+@th_dark_clr_dark_grey: #222;
+@th_dark_clr_panel_links: #9FC54E;
+@th_dark_observatory_trigger_color: yellow;//#117711;
+@th_dark_clr_trigger_background: #333;
+@th_dark_clr_trigger_bg_hover: #111;
+@th_dark_clr_label_text: #eee;
+
+
+.lb_theme_dark { 
+	.lb_message {
+		color: @th_dark_clr_logs_main; 
+	}
+	.observatory_panel {
+		color: @th_dark_clr_logs_main; 
+		background: @th_dark_panel_bg_color;
+		border:1px solid @th_dark_clr_panel_border;
+		filter: alpha(opacity=90);
+		opacity: .90;
+	}
+	#id_templates_div td a,
+	.lb_yellow {
+		color: @th_dark_clr_yellow;
+	}
+	.lb_table-striped tbody tr:nth-child(odd) td,
+	.lb_table-striped tbody tr:nth-child(odd) th {
+  		background-color: @th_dark_clr_log_table_stripes;
+	}
+	#id_session_div,
+	#id_templates_div {
+		border-right: dashed 1px @th_dark_clr_vertical_border;
+	}
+	#id_templates_div td a:hover {
+		background: @th_dark_clr_darker_grey;
+	}
+	.nav-tabs li a:hover,
+	.nav-tabs .active li a  {
+		background: @th_dark_clr_dark_grey
+	}
+	.observatory_panel a, .observatory_panel a:visited{
+		color: @th_dark_clr_panel_links;
+		//border-bottom: 1px solid @th_light_clr_panel_links;
+	}
+	a.observatory_trigger{
+		background: @th_dark_clr_trigger_background; 
+		color: @th_dark_observatory_trigger_color;
+		border:1px solid @th_dark_observatory_trigger_color;
+	}
+	a.observatory_trigger:hover{
+		background: @th_dark_clr_trigger_bg_hover 85% 55% no-repeat;
+	}
+	.lb_table-striped .label {
+		color: @th_dark_clr_label_text;
+	}
+}
+
+
+// ------------------ LIGHT ----------------------
+@th_light_clr_logs_main: #333;
+@th_light_panel_bg_color: #eee;
+@th_light_clr_panel_border: #ccc;
+@th_light_clr_yellow: blue ;
+@th_light_clr_log_table_stripes: #ddd;
+@th_light_clr_vertical_border: #999;
+@th_light_clr_darker_grey: #ccc;
+@th_light_clr_dark_grey: #ccc;
+@th_light_clr_panel_links: #3a87ad;
+@th_light_observatory_trigger_color: #333;//#117711;
+@th_light_clr_trigger_background: #eee;
+@th_light_clr_trigger_bg_hover: #999;
+@th_light_clr_label_text: #eee;
+
+
+.lb_theme_light { 
+	.lb_message {
+		color: @th_light_clr_logs_main; 
+	}
+	.observatory_panel {
+		color: @th_light_clr_logs_main; 
+		background: @th_light_panel_bg_color;
+		border:1px solid @th_light_clr_panel_border;
+		filter: alpha(opacity=95);
+		opacity: .95;
+	}
+	#id_templates_div td a,
+	.lb_yellow {
+		color: @th_light_clr_yellow;
+	}
+	.lb_table-striped tbody tr:nth-child(odd) td,
+	.lb_table-striped tbody tr:nth-child(odd) th {
+  		background-color: @th_light_clr_log_table_stripes;
+	}
+	#id_session_div,
+	#id_templates_div {
+		border-right: dashed 1px @th_light_clr_vertical_border;
+	}
+	#id_templates_div td a:hover {
+		background: @th_light_clr_darker_grey;
+	}
+	.nav-tabs li a:hover,
+	.nav-tabs .active li a  {
+		background: @th_light_clr_dark_grey
+	}
+	.observatory_panel a, .observatory_panel a:visited{
+		color: @th_light_clr_panel_links;
+		//border-bottom: 1px solid @th_light_clr_panel_links;
+	}
+	a.observatory_trigger{
+		background: @th_light_clr_trigger_background; 
+		color: @th_light_observatory_trigger_color;
+		border:1px solid @th_light_observatory_trigger_color;
+	}
+	a.observatory_trigger:hover{
+		background: @th_light_clr_trigger_bg_hover 85% 55% no-repeat;
+	}
+	.lb_table-striped .label {
+		color: @th_light_clr_label_text;
+	}
+}
+// ************************* end of themes ***************************
 
 .lb_invisible {
 	display: none;
@@ -83,10 +155,6 @@
 	border: 0;
 }
 
-.lb_yellow {
-	color: @yellow;
-}
-
 // styling Logs tab
 .lb_loglevel {width: 60px;}
 .lb_timestamp {width: 88px; /*width: 160px;*/}
@@ -95,7 +163,7 @@
 
 .lb_module {max-width: 180px;}
 
-.lb_message {color: @logs_main_color; font-weight: normal; font-family: sans-serif, Verdana, monospace; }
+.lb_message {font-weight: normal; font-family: sans-serif, Verdana, monospace; }
 .lb_header {font-weight: 300; }
 .lb_header td {
     &:hover {
@@ -108,10 +176,6 @@
 .lb_server  .label,
 .lb_module .label {
 	font-size: 10px;
-}
-
-.lb_table-striped .label {
-	color: @clr_label_text;
 }
 
 .lb_module .label {
@@ -136,17 +200,11 @@ tr.no_border,
 	border: none;
 }
 
-.lb_table-striped tbody tr:nth-child(odd) td,
-.lb_table-striped tbody tr:nth-child(odd) th {
-  background-color: @clr_log_table_stripes;
-}
-
 // styling App internals tab
 #id_session_div,
 #id_templates_div {
 	float: left;
 	margin-right: 30px;	
-	border-right: dashed 1px @clr_vertical_border;
 	padding-right: 10px;
 }
 
@@ -167,16 +225,9 @@ tr.no_border,
 }
 
 #id_templates_div td a {
-	color: @yellow;
 	text-decoration: none;
 	border: none;
 }
-
-#id_templates_div td a:hover {
-	background: @clr_darker_grey;
-	color:yellow;
-}
-
 
 //Tab functionality
 
@@ -185,13 +236,6 @@ tr.no_border,
 	height: 90%;
 }
 
-.nav-tabs li a:hover  {
-	background: @clr_dark_grey;
-}
-
-.nav-tabs .active li a  {
-	background: @clr_dark_grey;
-}
 
 #id_help_tab, #id_app_tab, #id_templates_tab {
 	display: none;
@@ -226,15 +270,12 @@ tr.no_border,
 	margin: 0 0 0 -47%;
 	min-width: 968px;
 	//height: 50%;
-	color: @logs_main_color;
 	//clear: both;
 	position: fixed;
 	//top: 50px;
 	bottom: 0;
 	//left: 0;
 	//display: none;
-	background: @panel_bg_color;
-	border:1px solid @clr_panel_border;
 	-moz-border-radius-topright: 20px;
 	-moz-border-radius-topleft: 20px;
 	-webkit-border-top-right-radius: 20px;
@@ -243,18 +284,11 @@ tr.no_border,
 	-webkit-border-bottom-right-radius: 20px;*/
 	//width: 600px;
 	padding: 10px 10px 10px 40px;
-	filter: alpha(opacity=@panel_opacity);
-	opacity: @panel_opacity_fract;
 	z-index: 100000;
 
 	-webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
      -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
           box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-}
-
-.observatory_panel a, .observatory_panel a:visited{
-	color: @clr_panel_links;
-	border-bottom: 1px solid @clr_panel_links;
 }
 
 .observatory_panel a, .observatory_panel a:visited{
@@ -264,8 +298,6 @@ tr.no_border,
 }
 
 a.observatory_trigger{
-	background: @clr_trigger_background; //@panel_bg_color;
-	color: @observatory_trigger_color;
 	position: fixed;
 	text-decoration: none;
 	bottom: 0px; left: 0;
@@ -275,7 +307,7 @@ a.observatory_trigger{
 	
 	padding: 4px 8px 4px 4px;
 	font-weight: 700;
-	border:1px solid @observatory_trigger_color;
+
 	-moz-border-radius-topright: 6px;
 	-webkit-border-top-right-radius: 6px;
 	-moz-border-radius-bottomright: 6px;
@@ -285,9 +317,4 @@ a.observatory_trigger{
 	display: block;
 }
 
-a.observatory_trigger:hover{
-
-	background: @clr_trigger_bg_hover 85% 55% no-repeat;
-
-}
 
