--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -341,6 +341,8 @@ tr.no_border,
 	-moz-border-radius-topleft: 20px;
 	-webkit-border-top-right-radius: 20px;
 	-webkit-border-top-left-radius: 20px;
+    border-radius-topright: 20px;
+    border-radius-topleft: 20px;
 	/*-moz-border-radius-bottomright: 20px;
 	-webkit-border-bottom-right-radius: 20px;*/
 	//width: 600px;
