restructured to show events, helpers and key callbacks, but some are not showing for some reason

--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -243,9 +243,8 @@ tr.no_border,
 .lb_console {
 	float: left;
 	width: auto;
-	min-width: 350px;
-	max-width: 600px;
-
+	//min-width: 350px;
+	//max-width: 95%;
 }
 
 #id_session_div {
