reformatted template internals

--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -171,6 +171,10 @@
 }
 // ************************* end of themes ***************************
 
+.lb_highlight_element {
+  border: 2px dashed #f00;
+}
+
 .lb_invisible {
 	display: none;
 }
@@ -240,19 +244,12 @@ tr.no_border,
 	padding-right: 10px;
 }
 
-.lb_console {
-	float: left;
-	width: 800px;
-	//min-width: 350px;
-	//max-width: 95%;
-}
-
 #id_session_div {
 	width: 300px;
 }
 
 #id_templates_div {
-	width: 500px;
+	width: 240px;
 }
 
 #id_templates_div td a {
