Fixing timestamp display

--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -31,6 +31,9 @@
 @th_dark_clr_label_text: #eee;
 
 .lb_theme_dark {
+    .lb_timestamp {
+      color: #eee;
+    }
 	.lb_message {
 		color: @th_dark_clr_logs_main; 
 	}
