proper logged in user logging, API doc fixes

--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -31,7 +31,8 @@
 @th_dark_clr_label_text: #eee;
 
 .lb_theme_dark {
-    .lb_timestamp {
+    .lb_timestamp,
+    .lb_user {
       color: #eee;
     }
 	.lb_message {
