--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -348,7 +348,7 @@ tr.no_border,
 
 // Main panel styling. 
 .height25 {
-	height: 150px;
+	height: 250px;
 	//display: none;
 	position: fixed;
 }
@@ -359,12 +359,12 @@ tr.no_border,
 }
 
 .height50 {
-	height: 50%;
+	height: 40%;
 	position: fixed;
 }
 
 .height90 {
-	height: 90%;
+	height: 100%;
 	position: fixed;
 }
 
@@ -381,12 +381,12 @@ tr.no_border,
 
 .observatory_panel_static {
 //overflow: scroll;
-  width: 90%;
-  left: 50%;
-  margin: 0 0 0 -47%;
+  width: 98%;
+  left: 2px;
+  //margin: 0 0 0 -50%;
   min-width: 968px;
 
-  padding: 10px 10px 10px 40px;
+  padding: 10px 10px 10px 10px;
   z-index: 100000;
 
   position: fixed;
@@ -412,9 +412,9 @@ tr.no_border,
 
 .observatory_panel {
 	//overflow: scroll;
-	width: 90%;
-	left: 50%;
-	margin: 0 0 0 -47%;
+	width: 98%;
+	left: 2px;
+	//margin: 0 0 0 -50%;
 	min-width: 968px;
 	//height: 50%;
 	//clear: both;
@@ -432,7 +432,7 @@ tr.no_border,
 	/*-moz-border-radius-bottomright: 20px;
 	-webkit-border-bottom-right-radius: 20px;*/
 	//width: 600px;
-	padding: 10px 10px 10px 40px;
+	padding: 10px 10px 10px 10px;
 	z-index: 100000;
 
 	-webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
