--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -117,6 +117,10 @@
 		filter: alpha(opacity=90);
 		opacity: .90;
 	}
+    .observatory_panel_static {
+      filter: alpha(opacity=100);
+      opacity: 1;
+    }
 	#id_templates_div td a,
 	.lb_yellow {
 		color: @th_dark_clr_yellow;
@@ -193,6 +197,10 @@
 		filter: alpha(opacity=95);
 		opacity: .95;
 	}
+    .observatory_panel_static {
+      filter: alpha(opacity=100);
+      opacity: 1;
+    }
 	#id_templates_div td a,
 	.lb_yellow {
 		color: @th_light_clr_yellow;
@@ -348,7 +356,7 @@ tr.no_border,
 
 // Main panel styling. 
 .height25 {
-	height: 250px;
+	height: 210px;
 	//display: none;
 	position: fixed;
 }
@@ -391,6 +399,7 @@ tr.no_border,
 
   position: fixed;
   height: 100%;
+  opacity: 1;
 //bottom: 0;
 }
 
