--- a/logging/client/observatory.less
+++ b/logging/client/observatory.less
@@ -389,8 +389,8 @@ tr.no_border,
 
 .observatory_panel_static {
 //overflow: scroll;
-  width: 98%;
-  left: 2px;
+  width: 96%;
+  right: 2px;
   //margin: 0 0 0 -50%;
   min-width: 968px;
 
@@ -421,8 +421,8 @@ tr.no_border,
 
 .observatory_panel {
 	//overflow: scroll;
-	width: 98%;
-	left: 2px;
+	width: 96%;
+	right: 2px;
 	//margin: 0 0 0 -50%;
 	min-width: 968px;
 	//height: 50%;
@@ -490,10 +490,12 @@ a.observatory_trigger{
 
 #btn_toggle_logs {
   bottom: 0px; left: 0;
+  z-index: 150000;
 }
 
 #btn_toggle_session {
   bottom: 30px; left: 0;
+  z-index: 150000;
 }
 
 #lb_session_popup {
