--- a/mars/observatory.less
+++ b/mars/observatory.less
@@ -72,7 +72,7 @@
 // ****************** new theming approach ********************
 
 // ------------------ dark ----------------------
-@th_dark_clr_logs_main: #ddd;
+@th_dark_clr_logs_main: #ccc;
 @th_dark_panel_bg_color: #000;
 @th_dark_clr_panel_border: #ccc;
 @th_dark_clr_yellow: #cccc11;
@@ -87,6 +87,16 @@
 @th_dark_clr_label_text: #eee;
 
 .lb_theme_dark {
+
+  .lb_btn {
+    color: @th_dark_clr_panel_links;
+    background-color: #333;
+  }
+
+  .lb_btn[disabled] {
+    color: #777;
+  }
+
     #lb_session_popup {
       background: #000;
       border: 1px #555 solid;
@@ -161,6 +171,7 @@
 	.lb_table-striped .label {
 		color: @th_dark_clr_label_text;
 	}
+
 }
 
 
@@ -181,6 +192,15 @@
 
 
 .lb_theme_light {
+
+  .lb_btn {
+    color: #555;
+    background-color: #bbb;
+  }
+
+  .lb_btn[disabled] {
+    color: #777;
+  }
 
     #lb_session_popup {
       background: #eee;
@@ -261,232 +281,370 @@
 }
 // ************************* end of themes ***************************
 
-.lb_highlight_element {
-  border: 2px dashed #f00;
-}
+#lb_id_containing_box {
+  .lb_highlight_element {
+    border: 2px dashed #f00;
+  }
 
-.lb_invisible {
-	display: none;
-}
+  .lb_message pre {
+      margin: 0;
+      padding: 0;
+      padding-left: 6px;
+      background: inherit;
+      color: inherit;
+      border: 0;
+  }
 
-.lb_message pre {
-	margin: 0;
-	padding: 0;
-	background: inherit;
-	color: inherit;
-	border: 0;
-}
+  // styling Logs tab
+  .lb_loglevel {width: 60px;}
+  td.lb_timestamp {min-width: 130px; /*width: 160px;*/}
+  .lb_server,
+  .lb_client {width: 30px; font-weight: 300;}
 
-// styling Logs tab
-.lb_loglevel {width: 60px;}
-.lb_timestamp {width: 88px; /*width: 160px;*/}
-.lb_server,
-.lb_client {width: 30px; font-weight: 300;}
+  .lb_module {max-width: 180px;}
 
-.lb_module {max-width: 180px;}
+  .lb_message {font-weight: normal; font-family: sans-serif, Verdana, monospace; }
+  .lb_header {font-weight: 300; }
+  .lb_header td {
+      &:hover {
+      cursor: pointer;
+  }
+  }
 
-.lb_message {font-weight: normal; font-family: sans-serif, Verdana, monospace; }
-.lb_header {font-weight: 300; }
-.lb_header td {
-    &:hover {
+  .lb_btn {
+    display: inline-block;
+    //padding: 8px 12px;
+    margin-bottom: 0;
+    font-size: 10px;
+    font-weight: bold;
+    //line-height: 1.428571429;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
     cursor: pointer;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+  }
+
+
+
+  .label {
+    display: inline;
+    padding: .1em .4em .1em .4em;
+    font-size: 75%;
+    font-weight: bold;
+    line-height: 1;
+    color: #eee;
+    background-color: #000;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: baseline;
+    border-radius: .25em;
+  }
+
+  .label[href]:hover,
+  .label[href]:focus {
+    color: #ffffff;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .label:empty {
+    display: none;
+  }
+
+  .label-default {
+    background-color: #999999;
+  }
+
+  .label-fatal {
+    background-color: #500;
+  }
+
+  .label-default[href]:hover,
+  .label-default[href]:focus {
+    background-color: #808080;
+  }
+
+  .label-primary {
+    background-color: #428bca;
+  }
+
+  .label-primary[href]:hover,
+  .label-primary[href]:focus {
+    background-color: #3071a9;
+  }
+
+  .label-success {
+    background-color: #5cb85c;
+  }
+
+  .label-success[href]:hover,
+  .label-success[href]:focus {
+    background-color: #449d44;
+  }
+
+  .label-info {
+    background-color: #5bc0de;
+  }
+
+  .label-info[href]:hover,
+  .label-info[href]:focus {
+    background-color: #31b0d5;
+  }
+
+  .label-warning {
+    background-color: #f0ad4e;
+  }
+
+  .label-warning[href]:hover,
+  .label-warning[href]:focus {
+    background-color: #ec971f;
+  }
+
+  .label-danger {
+    background-color: #d9534f;
+  }
+
+  .label-danger[href]:hover,
+  .label-danger[href]:focus {
+    background-color: #c9302c;
+  }
+
+
+  tbody {
+  .lb_loglevel .label,
+  .lb_client  .label,
+  .lb_server  .label,
+  .lb_module .label,
+  .lb_timestamp {
+      font-size: 10px;
+  }
+  }
+
+
+
+  .lb_module .label {
+      //background: @clr_module_label;
+  }
+
+  .lb_test_label {
+      background: @tb_grey;
+  }
+
+  .lb_message pre.lb_msg_error {
+      color: @red;
+  }
+
+  .lb_message pre.lb_msg_warning {
+      color: @tb_orange;
+  }
+
+  .lb_message pre.text-error {
+      color: @tb_red;
+  }
+
+  tr.no_border,
+  .no_border td,
+  .no_border th a, {
+      border: none;
+  }
+
+  // styling App internals tab
+  #id_session_div,
+  #id_templates_div {
+      float: left;
+      margin-right: 30px;
+      padding-right: 10px;
+  }
+
+  #id_session_div {
+      width: 500px;
+  }
+
+  #id_templates_div {
+      width: 240px;
+  }
+
+  #id_templates_div td a {
+      text-decoration: none;
+      border: none;
+  }
+
+  //Tab functionality
+
+  #lb_main_tab a{
+      font-weight: bold; font-family: Arial; font-size: 16px;
+  }
+
+
+  // Main panel styling.
+  .height25 {
+      height: 210px;
+      //display: none;
+      position: fixed;
+  }
+
+  .height25 .lb_scrollable {
+      height:100%;
+
+  }
+
+  .height50 {
+      height: 42%;
+      position: fixed;
+  }
+
+  .height90 {
+      height: 100%;
+      position: fixed;
+  }
+
+  .height-fixed {
+      position: absolute;
+      bottom: 0;
+      height: 400px;
+  }
+
+  .lb_scrollable {
+    overflow: auto;
+    height: 90%;
+  }
+
+  .observatory_panel_static {
+  //overflow: scroll;
+    width: 96%;
+    right: 2px;
+    //margin: 0 0 0 -50%;
+    min-width: 968px;
+
+    padding: 10px 10px 10px 10px;
+    z-index: 100000;
+
+    position: fixed;
+    height: 100%;
+    opacity: 1;
+  //bottom: 0;
+  }
+
+
+  .observatory_panel_static_left {
+    width: 25%;
+    min-width: 300px;
+    max-width: 500px;
+    z-index: 100000;
+    position: fixed;
+    height: 100%;
+    left: 0;
+    top: 40px;
+  }
+
+  .lb_hidden {
+    display: none;
+  }
+
+  .observatory_panel {
+      //overflow: scroll;
+      width: 96%;
+      right: 2px;
+      //margin: 0 0 0 -50%;
+      min-width: 968px;
+      //height: 50%;
+      //clear: both;
+      //position: fixed;
+      //top: 50px;
+      //bottom: 0;
+      //left: 0;
+      //display: none;
+      -moz-border-radius-topright: 20px;
+      -moz-border-radius-topleft: 20px;
+      -webkit-border-top-right-radius: 20px;
+      -webkit-border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      border-top-left-radius: 20px;
+      /*-moz-border-radius-bottomright: 20px;
+      -webkit-border-bottom-right-radius: 20px;*/
+      //width: 600px;
+      padding: 10px 10px 10px 10px;
+      z-index: 100000;
+
+      -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+       -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+
+      //position: fixed;
+      bottom: 0;
+  }
+
+  .observatory_panel_overlay {
+      position: fixed;
+      //bottom: 0;
+
+  }
+
+  .observatory_panel a, .observatory_panel a:visited,
+  .observatory_panel_static a, .observatory_panel_static a:visited
+  {
+      margin: 0;
+      padding: 0;
+      text-decoration: none;
+  }
+
+  a.observatory_trigger{
+      position: fixed;
+      text-decoration: none;
+      font-size: 16px;
+      letter-spacing:-1px;
+      font-family: verdana, helvetica, arial, sans-serif;
+
+      padding: 4px 8px 4px 4px;
+      font-weight: 700;
+      width: 20px;
+
+      -moz-border-radius-topright: 6px;
+      -webkit-border-top-right-radius: 6px;
+      -moz-border-radius-bottomright: 6px;
+      -webkit-border-bottom-right-radius: 6px;
+      -moz-border-radius-bottomleft: 0px;
+      -webkit-border-bottom-left-radius: 0px;
+      border-top-right-radius: 6px;
+      border-bottom-right-radius: 6px;
+      display: block;
+  }
+
+  #lb_code_console {
+    height: 90%;
+  }
+
+  #lb_status_line {
+    position: absolute;
+    right: 10px;
+  }
+
+  .nav-tabs li {
+    display: inline;
+    list-style-type: none;
+    padding-right: 20px;
+  }
+
+  .table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    font-family: "Helvetica Neue", Helvetica;
+  }
+
+  .table td {
+    padding-left: 4px;
+    padding-top: 4px;
+  }
+
 }
-}
 
-.lb_loglevel .label,
-.lb_client  .label,
-.lb_server  .label,
-.lb_module .label {
-	font-size: 10px;
-}
-
-.lb_module .label {
-	//background: @clr_module_label;
-}
-
-.lb_test_label {
-	background: @tb_grey;
-}
-
-.lb_message pre.lb_msg_error {
-	color: @red;
-}
-
-.lb_message pre.lb_msg_warning {
-	color: @tb_orange;
-}
-
-.lb_message pre.text-error {
-	color: @tb_red;
-}
-
-tr.no_border,
-.no_border td,
-.no_border th a, {
-	border: none;
-}
-
-// styling App internals tab
-#id_session_div,
-#id_templates_div {
-	float: left;
-	margin-right: 30px;	
-	padding-right: 10px;
-}
-
-#id_session_div {
-	width: 500px;
-}
-
-#id_templates_div {
-	width: 240px;
-}
-
-#id_templates_div td a {
-	text-decoration: none;
-	border: none;
-}
-
-//Tab functionality
-
-#lb_main_tab a{
-	font-weight: bold; font-family: Arial; font-size: 16px;
-}
-
-
-// Main panel styling. 
-.height25 {
-	height: 210px;
-	//display: none;
-	position: fixed;
-}
-
-.height25 .lb_scrollable {
-	height:100%;
-	
-}
-
-.height50 {
-	height: 42%;
-	position: fixed;
-}
-
-.height90 {
-	height: 100%;
-	position: fixed;
-}
-
-.height-fixed {
-	position: absolute;
-	bottom: 0;
-	height: 400px;
-}
-
-.lb_scrollable {
-  overflow: auto;
-  height: 90%;
-}
-
-.observatory_panel_static {
-//overflow: scroll;
-  width: 96%;
-  right: 2px;
-  //margin: 0 0 0 -50%;
-  min-width: 968px;
-
-  padding: 10px 10px 10px 10px;
-  z-index: 100000;
-
-  position: fixed;
-  height: 100%;
-  opacity: 1;
-//bottom: 0;
-}
-
-
-.observatory_panel_static_left {
-  width: 25%;
-  min-width: 300px;
-  max-width: 500px;
-  z-index: 100000;
-  position: fixed;
-  height: 100%;
-  left: 0;
-  top: 40px;
-}
-
-.lb_hidden {
-  display: none;
-}
-
-.observatory_panel {
-	//overflow: scroll;
-	width: 96%;
-	right: 2px;
-	//margin: 0 0 0 -50%;
-	min-width: 968px;
-	//height: 50%;
-	//clear: both;
-	//position: fixed;
-	//top: 50px;
-	//bottom: 0;
-	//left: 0;
-	//display: none;
-	-moz-border-radius-topright: 20px;
-	-moz-border-radius-topleft: 20px;
-	-webkit-border-top-right-radius: 20px;
-	-webkit-border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-	/*-moz-border-radius-bottomright: 20px;
-	-webkit-border-bottom-right-radius: 20px;*/
-	//width: 600px;
-	padding: 10px 10px 10px 10px;
-	z-index: 100000;
-
-	-webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-     -moz-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-
-    //position: fixed;
-    bottom: 0;
-}
-
-.observatory_panel_overlay {
-	position: fixed;
-	//bottom: 0;
-	
-}
-
-.observatory_panel a, .observatory_panel a:visited,
-.observatory_panel_static a, .observatory_panel_static a:visited
-{
-	margin: 0;
-	padding: 0;
-	text-decoration: none;
-}
-
-a.observatory_trigger{
-	position: fixed;
-	text-decoration: none;
-	font-size: 16px;
-	letter-spacing:-1px;
-	font-family: verdana, helvetica, arial, sans-serif;
-	
-	padding: 4px 8px 4px 4px;
-	font-weight: 700;
-    width: 20px;
-
-	-moz-border-radius-topright: 6px;
-	-webkit-border-top-right-radius: 6px;
-	-moz-border-radius-bottomright: 6px;
-	-webkit-border-bottom-right-radius: 6px;
-	-moz-border-radius-bottomleft: 0px;
-	-webkit-border-bottom-left-radius: 0px;
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-	display: block;
-}
 
 #btn_toggle_logs {
   bottom: 0px; left: 0;
@@ -519,12 +677,7 @@ a.observatory_trigger{
   width: 45%;
 }
 
-#lb_code_console {
-  height: 90%;
-}
-
-#lb_status_line {
-  position: absolute;
-  right: 10px;
+.lb_invisible {
+  display: none;
 }
 
